# tg-sticker-shot

./: .gitignore  AGENTS.md  AGENTS.md.txt  CLAUDE.md  README.md  REVIEW.md  pyproject.toml  todo-1.md
.github/workflows/: ci.yml
docs/: decisions.md  todo-1.md  todo.md
docs/research/: gemini-smoke-2026-07.md
src/tg_sticker_shot/: __init__.py  api_base.py  api_fake.py  api_gemini.py  core_config.py  core_emotions.py  core_persistence.py  core_pipeline.py  core_review.py  core_styles.py  emotions.yaml  frontend_cli.py  styles.yaml
tests/: test_cli.py  test_emotions.py  test_fake.py  test_gemini.py  test_persistence.py  test_pipeline.py  test_review.py  test_styles.py
